# lnreader-epub

./: .gitignore  README.md  pyproject.toml  run.py
lnreader_fb2/: main.py  types.py  xml_processor.py
tests/: test_xml_processor.py
tests/files/: lorem_ipsum.xml
